actualizacion del repo

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "firebase": "^11.4.0",
     "firebase-tools": "^13.34.0",
     "framer-motion": "^12.5.0",
